--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sharp": "^0.33.4"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
